Removed headshots from branch, changed src of imgs on pages

--- a/community/sbw/officers.html
+++ b/community/sbw/officers.html
@@ -6,7 +6,7 @@ sitemap: community/sbw
 
 
 <div class="uk-panel">
-  <img class="uk-align-right uk-margin-remove-adjacent" src="/assets/img/sbw/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
+  <img class="uk-align-right uk-margin-remove-adjacent" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
   <h5 class="uk-heading-small">2025 Soybean Breeders Workshop Planning Committee</h5>
 </div>
 <h1 class="uk-heading-divider uk-margin-remove-top"></h1>
@@ -16,7 +16,7 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                 <div class="uk-card-media-top">
-                    <img src="/assets/img/sbw/officers/SBW_officer_Keith_Rincker.png"  class="uk-margin-medium-top" width="200" height="200" alt="Keith Rincker">
+                    <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_Keith_Rincker.png"  class="uk-margin-medium-top" width="200" height="200" alt="Keith Rincker">
                 </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Keith Rincker</h3>
@@ -28,7 +28,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Ben_Hall.png"  class="uk-margin-medium-top" width="200" height="200" alt="Ben Hall">
+                        <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_Ben_Hall.png"  class="uk-margin-medium-top" width="200" height="200" alt="Ben Hall">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Ben Hall</h3>
@@ -41,7 +41,7 @@ sitemap: community/sbw
             <div>
                 <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                         <div class="uk-card-media-top">
-                            <img src="/assets/img/sbw/officers/SBW_officer_Aaron_Lorenz.png"  class="uk-margin-medium-top" width="200" height="200" alt="Aaron Lorenz">
+                            <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_Aaron_Lorenz.png"  class="uk-margin-medium-top" width="200" height="200" alt="Aaron Lorenz">
                         </div>
                     <div class="uk-card-body">
                         <h3 class="uk-card-title">Aaron Lorenz</h3>
@@ -54,7 +54,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Rex_Nelson.png"  class="uk-margin-medium-top" width="200" height="200" alt="Rex Nelson">
+                        <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_Rex_Nelson.png"  class="uk-margin-medium-top" width="200" height="200" alt="Rex Nelson">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Rex Nelson</h3>
@@ -69,7 +69,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_JD_Campbell.JPG"  class="uk-margin-medium-top" width="200" height="200" alt="Jacqueline Campbell">
+                        <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_JD_Campbell.JPG"  class="uk-margin-medium-top" width="200" height="200" alt="Jacqueline Campbell">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Jacqueline Campbell</h3>
@@ -81,7 +81,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Nicole_Choquett.jpg"  class="uk-margin-medium-top" width="200" height="200" alt="Nicole Choquett">
+                        <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_Nicole_Choquette.JPG"  class="uk-margin-medium-top" width="200" height="200" alt="Nicole Choquett">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Nicole Choquette</h3>
@@ -93,7 +93,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Cleiton_Wartha.png"  class="uk-margin-medium-top" width="200" height="200" alt="Cleiton Wartha">
+                        <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_Cleiton_Wartha.png"  class="uk-margin-medium-top" width="200" height="200" alt="Cleiton Wartha">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Cleiton Wartha</h3>
@@ -105,7 +105,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Ian_McNish.png"  class="uk-margin-medium-top" width="200" height="200" alt="Ian McNish">
+                        <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_Ian_McNish.png"  class="uk-margin-medium-top" width="200" height="200" alt="Ian McNish">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Ian McNish</h3>
