--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -6,7 +6,7 @@ sitemap: community/sbw
 
 
 <div class="uk-panel">
-  <img class="uk-align-right uk-margin-remove-adjacent" src="/assets/img/sbw/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
+  <img class="uk-align-right uk-margin-remove-adjacent" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
   <h5 class="uk-heading-small uk-margin-remove-vertical">2025 Soybean Breeders' Workshop</h5>
   <h6 class="uk-heading-small uk-margin-remove-top">Pathology and Breeding Innovations</h6>
 
@@ -93,7 +93,7 @@ sitemap: community/sbw
 <div>
     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
         <div class="uk-card-media-left uk-cover-container">
-            <img src="/assets/img/sbw/2025/SBW2025_Workshop_image.png" alt="Figure that shows significant marker trait associations">
+            <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2025/SBW2025_Workshop_image.png" alt="Figure that shows significant marker trait associations">
         </div>
         <div>
             <div class="uk-card-body">
@@ -113,7 +113,7 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-media-top">
-                <img class="uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Jan_Leach.png" width="200" height="200" alt="Dr. Jan Leach">
+                <img class="uk-margin-medium-top" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2025/SBW2025_Jan_Leach.png" width="200" height="200" alt="Dr. Jan Leach">
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Keynote Speaker</h3>
@@ -126,7 +126,7 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-media-top">
-                <img class="uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Carl_Bradley.png" width="200" height="200" alt="Dr. Carl Bradley">
+                <img class="uk-margin-medium-top" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2025/SBW2025_Carl_Bradley.png" width="200" height="200" alt="Dr. Carl Bradley">
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Keynote Speaker</h3>
@@ -139,7 +139,7 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-media-top">
-                <img class="uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Cory_Hirsch.jpg" width="200" height="200" alt="Dr. Cory Hirsch">
+                <img class="uk-margin-medium-top" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2025/SBW2025_Cory_Hirsch.jpg" width="200" height="200" alt="Dr. Cory Hirsch">
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Workshop Instructor</h3>
