--- a/community/sbw/workshop.html
+++ b/community/sbw/workshop.html
@@ -6,7 +6,7 @@ sitemap: community/sbw
 
 
 <div class="uk-panel">
-  <img class="uk-align-right uk-margin-remove-adjacent" src="/assets/img/sbw/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
+  <img class="uk-align-right uk-margin-remove-adjacent" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
   <h5 class="uk-heading-small uk-margin-remove-vertical">2025 Soybean Breeders' Workshop</h5>
   <h6 class="uk-heading-small uk-margin-remove-top">Workshop Details</h6>
 
