--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -44,7 +44,7 @@ sitemap: community/sbw
         <li>Posters must be removed by noon on Wednesday.</li>
         <li>Student Posters will be judged and awards given for the 1st ($300), 2nd ($200), 3rd ($100) place winners.</li>
         <li>Awards will be presented on Wednesday morning during the opening Welcome and Announcements. If you are not present, you will be notified by email and the award will be sent to you by mail.</li>
-        <li>For questions about the poster session please contact <a href="mailto:cleiton.wartha@corteva.com">Cleiton Wartha</a></li>
+        <li>For questions about the poster session please contact <a href="mailto:nchoquette@bensonhill.com">Nicole Choquette</a></li>
         </ul>
     </div>
 </div>
