--- a/about/lgs_and_chromosomes/index.html
+++ b/about/lgs_and_chromosomes/index.html
@@ -12,7 +12,7 @@ tools_menu: false
   <a href="https://pubmed.ncbi.nlm.nih.gov/12783169/">(Zou et al., 2003)</a>. The remaining 9 were given chromosome numbers in decreasing order of linkage group genetic length.
 </p>
 
-<table class="uk-table uk-width-1-1 uk-text-center uk-table-striped">
+<table class="uk-table uk-width-1-1 uk-text-center uk-table-striped uk-table-hover">
   <thead>
     <tr>
       <th class="uk-text-center"><b>Chr#</b></th>
