--- a/about/lgs_and_chromosomes/index.html
+++ b/about/lgs_and_chromosomes/index.html
@@ -7,7 +7,7 @@ tools_menu: false
 
 <p>
   Soybean chromosome and historical linkage group correspondences.  Linkage group lengths in cM are based on the Soybean Consensus Map 3.0
-  <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1893076/">(Choi et al., 2017)</a>
+  <a href="https://doi.org/10.1534/genetics.107.070821">(Choi et al., 2017)</a>
   produced by Perry Cregan's group at the USDA-ARS Soybean Genomics and Improvement Lab. The 11 initial linkage group to chromosome number assignments were made by Ted Hymowitz's group
   <a href="https://pubmed.ncbi.nlm.nih.gov/12783169/">(Zou et al., 2003)</a>. The remaining 9 were given chromosome numbers in decreasing order of linkage group genetic length.
 </p>
