update page to use cards and accordions

--- a/tools/translate/index.html
+++ b/tools/translate/index.html
@@ -9,6 +9,7 @@ layout: full-width
 
 <h2>Gene Model Translation / Correspondence</h2>
 
+<div class="uk-card uk-card-default uk-card-body uk-padding-small">
 <ul uk-accordion>
   <li>
     <a class="uk-accordion-title">Correspondence</a>
@@ -198,8 +199,10 @@ layout: full-width
     </div>
   </li>
 </ul>
+</div>
+<br>
 
-
+<div class="uk-card uk-card-default uk-card-body uk-padding-small">
 <!-- the custom pangene lookup element -->
  <ul uk-accordion>
   <li class="uk-open">
@@ -212,6 +215,7 @@ layout: full-width
     </div>
 </li>
 </ul>
+</div>
 <!-- set the form data and search functions by property because functions can't be set by attribute -->
 <script type="module">
 
