update accordion layout, add stock images for page header banners

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ events_card: true
 blog_card: true
 
 ---
-
 <h1>SoyBase</h1>
+<div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light uk-margin-bottom" data-src="../../assets/img/stock_images/soyfield.jpg" uk-img></div>
 
 <p class="uk-text-default">SoyBase integrates genetic and genomic information to aid
  soybean breeders and researchers. This instance of the site has been ported to a 
