Moved JS to assets folder and code cleanup.

--- a/tools/parentage/index.html
+++ b/tools/parentage/index.html
@@ -7,7 +7,7 @@ title: Parentage Viewer
 <head>
     {% include head.html %}
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> 
-    <script src="./js/main.js"></script>
+    <script src="/assets/js/parentage.js"></script>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -44,9 +44,6 @@ title: Parentage Viewer
                     <th>Individual</th>
                     <th>Female Parent</th>
                     <th>Male Parent</th>
-                    <!-- <th>Pedigree</th>
-                    <th>Synonyms</th>
-                    <th>Notes</th> -->
                 </tr>
             </thead>
             <tbody>
