--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ blog_card: true
 
 ---
 
-<p class="uk-text-danger uk-text-center uk-text-lead">This government website will not be updated during a funding lapse. Information may not be up-to-date, transactions submitted via this website may not be processed, and inquiries may not be responded to until appropriations are enacted.</p>
+<p class="uk-text-danger uk-text-lead">This government website will not be updated during a funding lapse. Information may not be up-to-date, transactions submitted via this website may not be processed, and inquiries may not be responded to until appropriations are enacted.</p>
 
 <h1>SoyBase</h1>
 
