--- a/tools/parentage/index.html
+++ b/tools/parentage/index.html
@@ -8,7 +8,54 @@ title: Parentage Viewer
     {% include head.html %}
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> 
     <script src="/assets/js/parentage.js"></script>
-    <link rel="stylesheet" href="./css/main.css">
+    <style>
+        .uk-button-primary {
+            background-color: #235626;
+        }
+        .uk-button-primary:hover {
+            background-color: #1a4720;
+        }
+        .uk-button-primary:disabled:hover {
+            background-color: transparent;
+        }
+        .uk-link, a, .uk-nav-default > li > a:hover, .uk-dropdown-nav > li.uk-active > a, .uk-dropdown-nav > li > a:hover {
+            color: #060;
+        }
+        .uk-link:hover, a:hover {
+            color: #1a4720;
+        }
+        .uk-table th {
+            color: #2b2b2b;
+            font-weight: 600;
+        }
+        html, .uk-text-meta, .uk-textarea, .uk-select, .uk-dropdown-nav > li > a, .uk-nav-default > li > a {
+            color: #282828;
+        }
+        label {
+            display: block;
+        }
+
+        .letter-filter {
+            margin: 20px 0;
+        }
+
+        .letter-filter span {
+            margin-right: 10px;
+            cursor: pointer;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+
+        .letter-filter span:hover {
+            color: #1a4720;
+            text-decoration: underline;
+        }
+
+        .letter-filter span.active {
+            color: #060;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
