More tweaks to text of Soy2025 page

--- a/community/soy_biennial/index.html
+++ b/community/soy_biennial/index.html
@@ -7,8 +7,8 @@ sitemap: community/soy_biennial
 <h2> Biennial Conference - Molecular &amp; Cellular Biology of the Soybean </h2>
 <p>
   The Molecular &amp; Cellular Biology of the Soybean conference is held biennially, each generally at a different venue.<br />
-  Discussions and presentations cover topics of cutting edge research into topics such as pests and diseases, 
-  genetic and genomic changes driving soybean advancement, seed composition and nutrition, biotic interactions, 
+  This conference features cuttingr- edge research on topics including genetic and genomic changes driving soybean advancement, 
+  soybean pests and diseases, seed composition and nutrition, biotic interactions, 
   functional genomics, genome structure and evolution, and more.
 </p>
 <div class="uk-panel">
@@ -20,14 +20,14 @@ sitemap: community/soy_biennial
     <a class="uk-button uk-button-danger uk-border-rounded" href="https://uwmadison.eventsair.com/soy-2025/registration/Site/Register">Register</a> 
   </p>
 
-  <br> 
   <ul class="uk-list">
     <li>Affordable registration and lodging for students and researchers. Dormitory and hotel information 
         can be found <a href="https://conferences.union.wisc.edu/soy2025/lodging/" target='_blank'>here</a>
     </li>
     <li>Call of abstracts submission for poster presentations (and speaking slots) will be open in late January 2025. 
-        Conference speakers will include nine speakers (any career level) chosen from submitted poster abstracts, 
-        and eight 5-minute “lightning talk” early-career speakers also chosen from poster abstracts.
+        Conference speakers will include researchers selected by organizers as well as 
+        speakers (at any career level) chosen from submitted poster abstracts, 
+        and 5-minute “lightning talk” by early-career speakers.
     </li>
   </ul>
 
