removed an extra letter

--- a/community/soy_biennial/index.html
+++ b/community/soy_biennial/index.html
@@ -7,7 +7,7 @@ sitemap: community/soy_biennial
 <h2> Biennial Conference - Molecular &amp; Cellular Biology of the Soybean </h2>
 <p>
   The Molecular &amp; Cellular Biology of the Soybean conference is held biennially, each generally at a different venue.<br />
-  This conference features cuttingr- edge research on topics including genetic and genomic changes driving soybean advancement, 
+  This conference features cutting-edge research on topics including genetic and genomic changes driving soybean advancement, 
   soybean pests and diseases, seed composition and nutrition, biotic interactions, 
   functional genomics, genome structure and evolution, and more.
 </p>
