Fix typo in soygec page: Qiajian -> Qijian

--- a/community/soygec/index.html
+++ b/community/soygec/index.html
@@ -30,7 +30,7 @@ sitemap: community/soygec
     <li><a href='mailto:xli@mail.hzau.edu.cn'>Xia Li</a></li>
     <li><a href='mailto:maj@purdue.edu'>Jianxin Ma</a></li>
     <li><a href='mailto:staceym@missouri.edu'>Bing Stacey</a></li>
-    <li><a href='mailto:qijian.song@usda.gov'>Qiajian Song</a></li>
+    <li><a href='mailto:qijian.song@usda.gov'>Qijian Song</a></li>
     <li><a href='mailto:david.grant@ars.usda.gov'>David Grant</a></li>
     <li><a href='mailto:wparrott@uga.edu'>Wayne Parrott</a></li>
     <li><a href='mailto:tclemente1@unl.edu'>Tom Clemente</a>, Ex-officio</li>
