update variable names

--- a/tools/grin/app.html
+++ b/tools/grin/app.html
@@ -7,7 +7,7 @@ title: Grin Data Explorer
 <link rel="stylesheet" type="text/css" href="styles.css" />
 
 <div uk-grid>
-    <section class="uk-width-1-1@s uk-card uk-card-default uk-card-body uk-margin-small-top uk-card-large uk-margin-remove-vertical">
+    <section class="uk-margin uk-width-1-1@s uk-card uk-card-default uk-card-body uk-margin-small-top uk-card-large uk-margin-remove-vertical">
 
         <table cellspacing="0" cellpadding="5" class="uk-padding">
             <tr>
