--- a/tools/grin/app.html
+++ b/tools/grin/app.html
@@ -78,3 +78,10 @@ title: Grin Data Explorer
 
 
 <button id="btnTopSubmitMainForm_test" class="uk-button uk-button-primary uk-width-1-1@s uk-width-1-6@l uk-margin" onclick="renderTraitsCheckbox()">Get Traits</button>
+
+
+{% assign traitClassName = site.data.traits-Glycine | map: 'traitClass' | uniq %}
+{% for item in traitClassName %}
+<label><input class="uk-checkbox" type="checkbox">{{item}}</label>
+<br>
+{% endfor %}
