--- a/tools/grin/app.html
+++ b/tools/grin/app.html
@@ -80,8 +80,22 @@ title: Grin Data Explorer
 <button id="btnTopSubmitMainForm_test" class="uk-button uk-button-primary uk-width-1-1@s uk-width-1-6@l uk-margin" onclick="renderTraitsCheckbox()">Get Traits</button>
 
 
+<div class="uk-margin">
+
 {% assign traitClassName = site.data.traits-Glycine | map: 'traitClass' | uniq %}
 {% for item in traitClassName %}
-<label><input class="uk-checkbox" type="checkbox">{{item}}</label>
+<div class="uk-card uk-card-default uk-card-body">
+    <label  class="uk-text-bold"><input class="uk-checkbox uk-margin-small-right" type="checkbox">{{item}}</label>
+        {% for name in site.data.traits-Glycine %}
+         {% if name.traitClass == item %}
+            <div class="uk-margin-medium-left">
+                <label  class="uk-text-capitalize"><input class="uk-checkbox uk-margin-small-right" type="checkbox">{{name.traitName}}</label>
+            </div>
+          {% endif %}
+          {% endfor %}
+</div>
 <br>
-{% endfor %}
+        {% endfor %}
+
+</div>
+
