--- a/tools/grin/app.html
+++ b/tools/grin/app.html
@@ -77,25 +77,30 @@ title: Grin Data Explorer
 
 
 
-<button id="btnTopSubmitMainForm_test" class="uk-button uk-button-primary uk-width-1-1@s uk-width-1-6@l uk-margin" onclick="renderTraitsCheckbox()">Get Traits</button>
+<button id="btnTopSubmitMainForm_test" class="uk-button uk-button-primary uk-width-1-1@s uk-width-1-6@l uk-margin" onclick="getTraitValues('51009')">Get Traits</button>
 
+<!-- Liquid Templating lang -->
 
-<div class="uk-margin">
+<!-- <div>
+    <div class="uk-margin uk-width-1-1@s uk-margin-small-top uk-card-large uk-child-width-1-1@s uk-child-width-1-3@m uk-child-width-1-4@l" uk-grid>
 
-{% assign traitClassName = site.data.traits-Glycine | map: 'traitClass' | uniq %}
-{% for item in traitClassName %}
-<div class="uk-card uk-card-default uk-card-body">
-    <label  class="uk-text-bold"><input class="uk-checkbox uk-margin-small-right" type="checkbox">{{item}}</label>
-        {% for name in site.data.traits-Glycine %}
-         {% if name.traitClass == item %}
-            <div class="uk-margin-medium-left">
-                <label  class="uk-text-capitalize"><input class="uk-checkbox uk-margin-small-right" type="checkbox">{{name.traitName}}</label>
-            </div>
-          {% endif %}
-          {% endfor %}
-</div>
-<br>
-        {% endfor %}
-
-</div>
-
+        {% assign traitClassName = site.data.traits-Glycine | map: 'traitClass' | uniq %}
+        {% for item in traitClassName %}
+        <div class="uk-card uk-card-default uk-card-body uk-margin-small-left">
+            <label  class="uk-text-bold"><input class="uk-checkbox uk-margin-small-right" type="checkbox">{{item}}</label>
+                {% for name in site.data.traits-Glycine %}
+                 {% if name.traitClass == item %}
+                    <div class="uk-margin-medium-left">
+                        <label  class="uk-text-danger"><input id={{name.traitDbId}} class="uk-checkbox uk-margin-small-right" type="checkbox" value={{name.traitDbId}} onclick={getTraitValues(this.value)}>{{name.traitName}}</label>
+                        <br>
+                        <span id="min-value"></span><div id="value-slider"></div><span id="max-value"></span>
+                        <p ><span id="value"></span</p>
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+        </div>
+        <br>
+                {% endfor %}
+        
+        </div>
+</div> -->
