--- a/community/sbw/SBW/posters2024.html
+++ b/community/sbw/SBW/posters2024.html
@@ -1,7 +1,17 @@
+---
 layout: default
 title: 2024 SBW Poster Winners
 sitemap: community/sbw
 ---
-<h2>Soybean Breeder's Workshop Graduate Student Poster Awards</h2>
+<h2>2024 Soybean Breeders' Workshop Graduate Student Poster Awards</h2>
+
+<div class="uk-card uk-card-default">
+    <div class="uk-card-media-top">
+        <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/SBW2024_Poster_Winners.jpg"  alt="2024 Graduate Student Poster Winners">
+    </div>
+    <div class="uk-card-body">
+        Left to Right: Kieth (Committee Member) 
+    </div>
+</div>
 
 
