move script to new file app.js

--- a/tools/grin/app.html
+++ b/tools/grin/app.html
@@ -3,7 +3,7 @@
 title: Grin Data Explorer
 ---
 
-<script type="text/javascript" src="scripts.js"></script>
+<script type="text/javascript" src="app.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css" />
 
 <div uk-grid>
