--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -38,7 +38,7 @@ sitemap: community/sbw
     <div id="details-1" class="uk-margin-small uk-hidden">
         <ul>
         <li>Anyone is welcome to display a poster. Posters previously presented at other meetings are welcome.</li>
-        <li>Poster display space is nominally 36 inches by 48 inches</li>
+        <li>Poster display space is nominally 36 inches in height X 48 inches wide</li>
         <li>Poster abstracts will be accepted until January 31, 2025 </li>
         <li>Posters may be hung up as early as Monday morning, and must remain up until Tuesday evening in order to be considered for competition awards.</li>
         <li>Posters must be removed by noon on Wednesday.</li>
