--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -34,7 +34,7 @@ sitemap: community/sbw
     Please <a href="https://www.eventbrite.com/e/2025-soybean-breeders-workshop-tickets-910521944647">register</a> to submit a poster abstract.
     </p>
 <div class="uk-margin">
-    <button class="uk-button uk-button-primary uk-button-small uk-border-rounded" type="button" uk-toggle="target: #details-1; animation: uk-animation-fade; cls: uk-hidden" onclick="rotateTriangle(this)" value="details-1-triangle"><div class="uk-flex">details<span id="details-1-triangle" uk-icon="icon:triangle-right" class="toggle-top-margin"></span></div></button>
+    <button class="uk-button uk-button-primary uk-button-small uk-border-rounded" type="button" uk-toggle="target: #details-1; animation: uk-animation-fade; cls: uk-hidden" onclick="rotateTriangle(this)" value="details-1-triangle"><div class="uk-flex">Poster Details<span id="details-1-triangle" uk-icon="icon:triangle-right" class="toggle-top-margin"></span></div></button>
     <div id="details-1" class="uk-margin-small uk-hidden">
         <ul>
         <li>Anyone is welcome to display a poster. Posters previously presented at other meetings are welcome.</li>
