--- a/community/index.html
+++ b/community/index.html
@@ -5,6 +5,9 @@ sitemap: community
 ---
 
 <h1>Community</h1>
+  <div class="uk-text-lead"></div>
+    <a href="survey.html">Please take our SoyBase Survey</a>
+  </div>
 
 {% if site.data.community %}
 {% assign community = site.data.community %}
