--- a/community/index.html
+++ b/community/index.html
@@ -5,7 +5,7 @@ sitemap: community
 ---
 
 <h1>Community</h1>
-  <div class="uk-text-lead"></div>
+  <div class="uk-text-lead">
     <a href="survey.html">Please take our SoyBase Survey</a>
   </div>
 
