Changed the word wrap on the letter filter.

--- a/tools/parentage/index.html
+++ b/tools/parentage/index.html
@@ -35,6 +35,7 @@ sitemap: tools/parentage-viewer
 
     .letter-filter {
         margin: 20px 0;
+        word-wrap: anywhere;
     }
 
     .letter-filter span {
