added link to SBW2025_Technician_agenda

--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -26,6 +26,7 @@ sitemap: community/sbw
     <li>This year the volunteered oral presentations on Wednesday morning will be selected from the poster abstracts. Abstracts must be submitted by <b>January 10</b> to be considered for an oral presentation.</li>
     <li>This year the Monday morning workshop is about <a href="workshop.html" target="_blank">effective visualization techniques in science</a>. The data visualization workshop costs $75.</li>
     <li><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Agenda_2025_1_27.pdf">Agenda</a> for the Soybean Breeders Workshop</li>
+    <li>Techicians' Meeting <a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025/SBW2025_Technician_Draft_Agenda.pdf" target="_blank">Agenda</a></li>
 </ul>    
     
 <h4 class="uk-text-bold">Poster Presentation and Judging Information</h4>
