--- a/community/survey.html
+++ b/community/survey.html
@@ -5,6 +5,9 @@ sitemap: false
 tools_menu: false
 ---
 
-<iframe
-  src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Glykqlk2qz6REpva4KviuwwxURUhCSk5JR1lIQ0lYRDJNVU4yMjRISjdDVSQlQCN0PWcu&embed=true" 
-  class="uk-height-1-1 uk-width-1-1 uk-margin-large-bottom"></iframe>
+
+<iframe src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Glykqlk2qz6REpva4KviuwwxURUhCSk5JR1lIQ0lYRDJNVU4yMjRISjdDVSQlQCN0PWcu&embed=true" 
+class="uk-height-1-1 uk-width-1-1 uk-margin-large-bottom"></iframe>
+
+
+<iframe width="640px" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Glykqlk2qz6REpva4KviuwwxURUhCSk5JR1lIQ0lYRDJNVU4yMjRISjdDVSQlQCN0PWcu&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
