--- a/community/sbw/survey.html
+++ b/community/sbw/survey.html
@@ -6,4 +6,10 @@ tools_menu: false
 ---
 
 <iframe
-  src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Gl2bo9kdNx-xMorl_ubJ-1mFUODc4R0g4N09HQUVHVUcyQ0I4N1ExTEZYRS4u&embed=true" class="uk-height-1-1 uk-width-1-1 uk-margin-large-bottom"></iframe>
+  src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Gl2bo9kdNx-xMorl_ubJ-1mFUODc4R0g4N09HQUVHVUcyQ0I4N1ExTEZYRS4u&embed=true" 
+  class="uk-height-1-1 uk-width-1-1 uk-margin-large-bottom"></iframe>
+
+  <!--
+  Below is the iframe code from Microsoft Forms:
+  <iframe width="640px" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Gl2bo9kdNx-xMorl_ubJ-1mFUODc4R0g4N09HQUVHVUcyQ0I4N1ExTEZYRS4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+  -->
