--- a/community/sbw/survey.html
+++ b/community/sbw/survey.html
@@ -7,7 +7,7 @@ tools_menu: false
 
 <iframe
   src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Gl2bo9kdNx-xMorl_ubJ-1mFUODc4R0g4N09HQUVHVUcyQ0I4N1ExTEZYRS4u&embed=true" 
-  class="uk-height-1-1 uk-width-1-1 uk-margin-large-bottom"></iframe>
+  class="uk-width-expand uk-margin-large-bottom uk-height-viewport"></iframe>
 
   <!--
   Below is the iframe code from Microsoft Forms:
