--- a/community/survey.html
+++ b/community/survey.html
@@ -7,7 +7,7 @@ tools_menu: false
 
 
 <iframe src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Glykqlk2qz6REpva4KviuwwxURUhCSk5JR1lIQ0lYRDJNVU4yMjRISjdDVSQlQCN0PWcu&embed=true" 
-class="uk-height-1-1 uk-width-1-1 uk-margin-large-bottom"></iframe>
+class="uk-margin-large-bottom uk-width-expand uk-height-viewport" ></iframe>
 
 <!--
 The iframe code below is from the Microsoft forms
