--- a/community/sbw/SBW/SBW_2017.html
+++ b/community/sbw/SBW/SBW_2017.html
@@ -165,17 +165,17 @@ Co-Chair, Public Crop Physiologist: Felix Fritschi - Univ. of Missouri  </p>
     </thead>
 
 <tbody>
-    <tr>11:00 am - 11:05 am	Welcome and Introduction to Session - Kelly Whiting, USB staff</tr>
-    <tr>11:05 am - 11:25 am 	Current and prospective opportunity for development of soybean oil for the saturated/solid fat and baking goods market - Don Banks, Edible Oil Technology</tr>
-    <tr>11:25 am - 11:45 am	<a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Gillman_2017_final_report_soybean_breeders_workshop_Stearic_acid_project.pdf'>Final report of the USB Stearic Acid breeding and genetics project - Jason Gillman, USDA-ARS Columbia Missouri</a></tr>
-    <tr>11:45 am - 12:00 pm	<a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Richard_Galloway_2-15-17.pdf'>Status and prospect of applying inter-esterification of soybean oil for the saturated/solid fat and baking goods market - Richard Galloway, Galloway and Associates</a></tr>
-    <tr>12:00 pm - 1:20 pm	Lunch (on your own)</tr>
-    <tr>1:20 pm - 2:20 pm 	USB Increased Oil Content project update - Leah McHale, Ohio State University</tr>
-    <tr>2:20 pm - 3:20 pm	USB Increased Protein Content and Amino Acids project update - Rouf Mian, USDA-ARS Raleigh NC</tr>
-    <tr>3:20 pm - 3:40 pm 	Break</tr>
-    <tr>3:40 pm - 4:40 pm	<a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Rainey_carbohydrate_sources.pdf'>USB Carbohydrate Traits project update - Katy Rainey, Purdue University</a></tr>
-    <tr>4:40 pm - 5:40 pm	USB High Oleic Breeding project update - Kristin Bilyeu, USDA-ARS Columbia, MO</tr>
-    <tr>6:15 pm		Dinner for USB composition project researchers (only) - Zermatt Room</tr>
+    <tr><td>11:00am</td><td>11:05am</td><td>Kelly Whiting, USB staff</td><td>Welcome and Introduction to Session</td></tr>
+    <tr><td>11:05am</td><td>11:25am</td><td>Don Banks, Edible Oil Technology</td><td>Current and prospective opportunity for development of soybean oil for the saturated/solid fat and baking goods market</td></tr>
+    <tr><td>11:25am</td><td>11:45</td><td>Jason Gillman, USDA-ARS Columbia Missouri</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Gillman_2017_final_report_soybean_breeders_workshop_Stearic_acid_project.pdf'>Final report of the USB Stearic Acid breeding and genetics project</a></td></tr>
+    <tr><td>11:45am</td><td>12:00pm</td><td>Richard Galloway, Galloway and Associates</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Richard_Galloway_2-15-17.pdf'>Status and prospect of applying inter-esterification of soybean oil for the saturated/solid fat and baking goods market</a></td></tr>
+    <tr><td>12:00pm</td><td>1:20pm</td><td colspan='2'>Lunch (on your own)</td></tr>
+    <tr><td>1:20pm</td><td>2:20pm</td><td>Leah McHale, Ohio State University</td><td>USB Increased Oil Content project update</td></tr>
+    <tr><td>2:20pm</td><td>3:20pm</td><td>Rouf Mian, USDA-ARS Raleigh NC</td><td>USB Increased Protein Content and Amino Acids project update</td></tr>
+    <tr><td>3:20pm</td><td>3:40pm</td><td colspan='2'>Break</td></tr>
+    <tr><td>3:40pm</td><td>4:40pm</td><td>Katy Rainey, Purdue University</td> <a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Rainey_carbohydrate_sources.pdf'>USB Carbohydrate Traits project update</a></td></tr>
+    <tr><td>4:40pm</td><td>5:40pm</td><td>Kristin Bilyeu, USDA-ARS Columbia, MO</td><td>USB High Oleic Breeding project update</td></tr>
+    <tr><td>6:15pm</td><td colspan='3'>Dinner for USB composition project researchers (only) - Zermatt Room</td></tr>
 </tbody>
 </table>
 
@@ -190,18 +190,18 @@ Co-Chair, Public Crop Physiologist: Felix Fritschi - Univ. of Missouri  </p>
         </tr>
     </thead>
     <tbody>
-    <tr><td>8:00 am</td><td>8:05 am</td><td>Welcome & Introduction to Session - Kelly Whiting, USB staff</td></tr>
-    <tr><td>8:05 am</td><td>8:20 am</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Joost_VTF_Objectives_pre.pdf'>USB Value Task Force Objectives - Rich Joost, USB staff</a></td></tr>
-    <tr><td>8:20 am</td><td>8:40 am</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Seed_St_Louis_Feb162017_G_Denny.pdf'>Feedback from processors: specs., nutrient density, test weight - Gordon Denny, Gordon Denny LLC</a></td></tr>
-    <tr><td>8:40 am</td><td>9:05 am</td><td>USB project with DuPont Pioneer to increase protein content, and high oleic update - Reid Rice, DuPont-Pioneer</td></tr>
-    <tr><td>9:05 am</td><td>9:25 am</td><td>Marketing high protein varieties: the Arkansas model - Lanny Ashlock, Natural Soy and Grain Alliance, Arkansas</td></tr>
-    <tr><td>9:25 am</td><td>9:45 am </td><td>Future of soybean variety development including quality traits at Bayer Crop Science</td></tr>
-    <tr><td>9:45 am</td><td>10:05 am</td><td>Break</td></tr>
-    <tr><td>10:05 am</td><td>10:35 am</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Breeders_Workshop_2017b.pdf'>Feasibility of drawing carbon for additional protein and oil in soybean seed from soluble or insoluble (fiber) carbohydrates - Doug Allen, USDA-ARS, Danforth Plant Science Center, St Louis</a></td></tr>
-    <tr><td>10:35 am</td><td>10:55 am</td><td>Development of high oleic soybean varieties at Schillinger Genetics - John Schillinger, of Schillinger Genetics Inc. </td></tr>
-    <tr><td>10:55 am</td><td>11:10 am</td><td>	Genetic sources of increased sugar content in soybean- Katy Rainey, Purdue University</td></tr>
-    <tr><td>11:10 am</td><td>11:25 am</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Pantalone_2017_Amino_Acid_Genetic_Variation.pdf'>Genetic variation and quantification of amino acids in soybean seed - Vince Pantalone, University of Tennessee</a></td></tr>
-    <tr><td>11:25 am</td><td>11:45 am</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Bajjalieh_2.16.2017.pdf'>Capturing value of key amino acids of soybean - Nick Bajjalieh, Integrative Nutrition Inc., Decatur IL</a></td></tr>
-    <tr><td>11:45 am</td><td>12:00 pm</td><td>Wrap-up - Kelly Whiting, USB staff</td></tr>
+    <tr><td>8:00am</td><td>8:05am</td><td>Kelly Whiting, USB staff</td><td>Welcome & Introduction to Session</td></tr>
+    <tr><td>8:05am</td><td>8:20am</td><td>Rich Joost, USB staff</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Joost_VTF_Objectives_pre.pdf'>USB Value Task Force Objectives</a></td></tr>
+    <tr><td>8:20am</td><td>8:40am</td><td>Gordon Denny, Gordon Denny LLC</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Seed_St_Louis_Feb162017_G_Denny.pdf'>Feedback from processors: specs., nutrient density, test weight </a></td></tr>
+    <tr><td>8:40am</td><td>9:05am</td><td>Reid Rice, DuPont-Pioneer</td><td>USB project with DuPont Pioneer to increase protein content, and high oleic update</td></tr>
+    <tr><td>9:05am</td><td>9:25am</td><td>Lanny Ashlock, Natural Soy and Grain Alliance, Arkansas</td><td>Marketing high protein varieties: the Arkansas model</td></tr>
+    <tr><td>9:25am</td><td>9:45am </td><td colspan='2'>Future of soybean variety development including quality traits at Bayer Crop Science</td></tr>
+    <tr><td>9:45am</td><td>10:05am</td><td colspan='2'>Break</td></tr>
+    <tr><td>10:05am</td><td>10:35am</td><td>Doug Allen, USDA-ARS, Danforth Plant Science Center, St Louis</td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Breeders_Workshop_2017b.pdf'>Feasibility of drawing carbon for additional protein and oil in soybean seed from soluble or insoluble (fiber) carbohydrates</a></td></tr>
+    <tr><td>10:35am</td><td>10:55am</td><td>John Schillinger, of Schillinger Genetics Inc.</td><td>Development of high oleic soybean varieties at Schillinger Genetics</td></tr>
+    <tr><td>10:55am</td><td>11:10am</td><td>Katy Rainey, Purdue University</td><td>Genetic sources of increased sugar content in soybean</td></tr>
+    <tr><td>11:10am</td><td>11:25am</td><td>Vince Pantalone, University of Tennessee</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Pantalone_2017_Amino_Acid_Genetic_Variation.pdf'>Genetic variation and quantification of amino acids in soybean seed</a></td></tr>
+    <tr><td>11:25am</td><td>11:45am</td><td>Nick Bajjalieh, Integrative Nutrition Inc., Decatur IL</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Bajjalieh_2.16.2017.pdf'>Capturing value of key amino acids of soybean</a></td></tr>
+    <tr><td>11:45am</td><td>12:00pm</td><td>Kelly Whiting, USB staff</td><td>Wrap-up</td></tr>
 </tbody>
 </table>
