--- a/community/sbw/SBW/SBW_2016.html
+++ b/community/sbw/SBW/SBW_2016.html
@@ -34,13 +34,13 @@ Public Plant Pathologist - <strong>John Rupe</strong>, Univ. of Arkansas - Gener
 	<tr><td>1:00</td><td>1:05</td><td>Andrew Scaboo, Univ. of Missouri</td><td>Welcome and announcements</td></tr>
 	<tr><th colspan='4'>SESSION I: Genetic Diversity</th></tr>
 	<tr><td>1:05</td><td>1:55</td><td>Steve Tanksley, Nature Source Genetics</td><td>Combining genomics and mathematical optimization in the exploitation of natural genetic diversity in plant breeding</td></tr>
-	<tr><td>1:55</td><td>2:35</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Singh.pdf">Ram Singh, USDA-ARS</a></td><td>Methodology to exploit Glycine tomentella for broadening the genetic base of modern soybean</td></tr>
+	<tr><td>1:55</td><td>2:35</td><td>Ram Singh, USDA-ARS</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Singh.pdf">Methodology to exploit Glycine tomentella for broadening the genetic base of modern soybean</a></td></tr>
 	<tr><td>2:35</td><td>3:05</td><td>David Price, Monsanto Co.</td><td>Utilization of genetic diversity with a commercial soybean breeding pipeline</td></tr>
 	<tr><td>3:05</td><td>3:25</td><td class="uk-text-bold">Break</td></tr>
 	<tr><th colspan='4'>SESSION II: Commodity Funding Agencies Update</th></tr>
-	<tr><td>3:25</td><td>3:55</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Anderson.pdf">Ed Anderson, NCSRP</a></td><td>North Central Soybean Research programs update</td></tr>
-	<tr><td>3:55</td><td>4:25</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Joost.pdf">Rich Joost, USB</a></td><td>USB Strategic Direction FY17 - FY21</td></tr>
-	<tr><td>4:25</td><td>4:55</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Whiting.pdf">Kelly Whiting, USB and<br />Cate Newberg, Iowa Soybean Assoc.</a></td><td>National Soybean Research Database: How it impacts check-off project researchers</td></tr>
+	<tr><td>3:25</td><td>3:55</td><td>Ed Anderson, NCSRP</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Anderson.pdf">North Central Soybean Research programs update</a></td></tr>
+	<tr><td>3:55</td><td>4:25</td><td>Rich Joost, USB</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Joost.pdf">USB Strategic Direction FY17 - FY21</a></td></tr>
+	<tr><td>4:25</td><td>4:55</td><td>Kelly Whiting, USB and<br />Cate Newberg, Iowa Soybean Assoc.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Whiting.pdf">National Soybean Research Database: How it impacts check-off project researchers</a></td></tr>
 	<tr><td>4:55</td><td>5:00</td><td>Andrew Scaboo, Univ. of Missouri</td><td>Announcements and Adjourn</td></tr>
 </tbody>
 </table>
@@ -67,27 +67,27 @@ Co-Chair, Public Plant Pathologist:  John Rupe, Univ. of Arkansas</p>
 <body>
 	<tr><td>8:00</td><td>8:05</td><td>Aaron Lorenz, Univ. of Minnesota</td><td>Announcements and Introduction</td></tr>
 	<tr><th colspan='4'>SESSION I:  Sudden Death Syndrome | John Rupe, USDA-ARS</th></tr>
-	<tr><td>8:05</td><td>8:30</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Bhattacharyya_v2.pdf">Madan Bhattacharyya, Iowa State Univ.</a></td><td>Novel biotech. approaches in fighting sudden death syndrome in soybean</td></tr>
-	<tr><td>8:30</td><td>8:55</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Leandro.pdf">Leanor Leandro, Iowa State Univ.</a></td><td>SDS Epidemiology</td></tr>
+	<tr><td>8:05</td><td>8:30</td><td>Madan Bhattacharyya, Iowa State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Bhattacharyya_v2.pdf">Novel biotech. approaches in fighting sudden death syndrome in soybean</a></td></tr>
+	<tr><td>8:30</td><td>8:55</td><td>Leanor Leandro, Iowa State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Leandro.pdf">SDS Epidemiology</a></td></tr>
 	<tr><td>8:55</td><td>9:20</td><td>Carl Bradley, Univ. of Kentucky</td><td>Multistate research on management of SDS</td></tr>
-	<tr><td>9:20</td><td>9:45</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Wang.pdf">Dechun Wang, Michigan State Univ.</a></td><td>Breeding for SDS resistance</td></tr>
+	<tr><td>9:20</td><td>9:45</td><td>Dechun Wang, Michigan State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Wang.pdf">Breeding for SDS resistance</a></td></tr>
 	<tr><td>9:45</td><td>10:05</td><th colspan='2'>Coffee Break</th></tr>
 	<tr><th colspan='4'>SESSION II:  Soybean Foliar Diseases | Danny Singh, Iowa State Univ.</th></tr>
 	<tr><td>10:05</td><td>10:30</td><td>Zenglu Li, Univ. of Georgia</td><td>Genetic Improvement of Rust Resistance in Soybean</td></tr>
 	<tr><td>10:30</td><td>10:55</td><td>Ahmad Fakoury, Southern Illinois Univ.</td><td>Management of Cercospora diseases in soybean:  USB Project Update</td></tr>
-	<tr><td>10:55</td><td>11:20</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Lackermann.pdf">Karen Lackermann, DuPont Pioneer</a></td><td>Trends in foliar disease diagnosis for 2015</td></tr>
+	<tr><td>10:55</td><td>11:20</td><td>Karen Lackermann, DuPont Pioneer</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Lackermann.pdf">Trends in foliar disease diagnosis for 2015</a></td></tr>
 	<tr><td>11:25</td><td>12:55</td><th colspan='2'>Lunch (on your own)</th></tr>
 	<tr><td>1:00</td><td>1:05</td><td>Aaron Lorenz, Univ. of Minnesota</td><td>Announcements and Introduction</td></tr>
 	<tr><th colspan='4'>SESSION III:  Soybean Nematode | Zenglu Li, Univ. of Georgia</th></tr>
-	<tr><td>1:05</td><td>1:30</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Diers_v2.pdf">Brian Diers, Univ. of Illinois</a></td><td>Impact of SCN resistance on nematode reproduction and yield</td></tr>
-	<tr><td>1:30</td><td>1:55</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Parrott_v2.pdf">Wayne Parrott, Univ. of Georgia</a></td><td>Untangling the knot: Identifying a gene for root-knot nematode resistance</td></tr>
-	<tr><td>1:55</td><td>2:20</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Arelli.pdf">Prakash Arelli, USDA-ARS</a></td><td>Improved methods for breeding soybean for more durable resistance to SCN</td></tr>
+	<tr><td>1:05</td><td>1:30</td><td>Brian Diers, Univ. of Illinois</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Diers_v2.pdf">Impact of SCN resistance on nematode reproduction and yield</a></td></tr>
+	<tr><td>1:30</td><td>1:55</td><td>Wayne Parrott, Univ. of Georgia</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Parrott_v2.pdf">Untangling the knot: Identifying a gene for root-knot nematode resistance</a></td></tr>
+	<tr><td>1:55</td><td>2:20</td><td>Prakash Arelli, USDA-ARS</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Arelli.pdf">Improved methods for breeding soybean for more durable resistance to SCN</a></td></tr>
 	<tr><td>2:20</td><td>2:45</td><td>Melissa Mitchum, Univ. of Missouri</td><td>The shifting sands of the soybean cyst nematode-soybean interaction</td></tr>
 	<tr><td>2:45</td><td>3:05</td><td colspan='2'>Snack Break</td></tr>
 	<tr><th colspan='4'>SESSION IV:  Soybean Seedling Diseases | Leah Mchale, Ohio State Univ.</th></tr>
 	<tr><td>3:05</td><td>3:30</td><td>Anne Dorrance, Ohio State Univ.</td><td>Seedling pathogens of soybean, their diversity and best practices for breeding for resistance</td></tr>
 	<tr><td>3:30</td><td>3:55</td><td>Jianxin Ma, Purdue Univ.</td><td>Molecular mapping and characterization of novel Rps genes</td></tr>
-	<tr><td>3:55</td><td>4:20</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Chilvers.pdf">Martin Chilvers, Michigan State Univ.</a></td><td>Oomycetes associated with soybean disease and improved molecular diagnostics</td></tr>
+	<tr><td>3:55</td><td>4:20</td><td>Martin Chilvers, Michigan State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Chilvers.pdf">Oomycetes associated with soybean disease and improved molecular diagnostics</a></td></tr>
 	<tr><td>4:20</td><td>4:45</td><td>John McDowell, Virginia Tech. Univ.</td><td>Effector-directed breeding as a tool to improve soybean resistance to Phytophthora sojae</td></tr>
 	<tr><td>4:50</td><td>5:00</td><td>Aaron Lorenz, Univ. of Minnesota</td><td>Announcements and Adjourn</td></tr>
 	<tr><td>5:30</td><td>6:30</td><td colspan='4' style='text-align:left; font-weight: bold;'>Social Hour &amp; Poster Session, Foyer &amp; Versailles 2</td></tr>
@@ -109,7 +109,7 @@ Co-Chair, Public Plant Pathologist:  John Rupe, Univ. of Arkansas</p>
 <body>
 	<tr><td>6:45</td><td>8:00</td><td colspan='2' style='font-weight:bold;'>Continental Breakfast, Versailles Foyer</td></tr>
 	<tr><td>8:00</td><td>8:05</td><td>Andrew Scaboo, Univ. of Missouri<br />Chris Tinius, Bayer CropScience</td><td>Welcome and Announcements<br />Poster Winners Announced</td></tr>
-	<tr><td>8:05</td><td>8:10</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Soybean_Genetics_Committee.pdf">Andrew Scaboo, Univ. of Missouri</a></td><td>Genetics Committee Report</td></tr>
+	<tr><td>8:05</td><td>8:10</td><td>Andrew Scaboo, Univ. of Missouri</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Soybean_Genetics_Committee.pdf">Genetics Committee Report</a></td></tr>
 	<tr><td>8:10</td><td>8:15</td><td>Silvia Cianzio, Iowa State Univ.</td><td>Germplasm Committee Report</td></tr>
 	<tr><td>8:15</td><td>8:20</td><td>Kristin Bilyeu, USDA-ARS</td><td>SoyGEC Report</td></tr>
 	<tr><td>8:20</td><td>8:40</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Grant.pdf">David Grant, Iowa State Univ.</a></td><td>SoyBase Update</td></tr>
