--- a/community/sbw/SBW/SBW_2024.html
+++ b/community/sbw/SBW/SBW_2024.html
@@ -157,7 +157,11 @@ genotype-by-environment interaction modeling</td></tr>
         </tr>
     </thead>
 <body>
-
+  <tr><td>12:00 pm</td><td>4:00 pm</td><td>Missouri Soybean Merchandising Coucil</td></tr>
+  <tr><td>12:00 pm</td><td>2:00 pm</td><td>Soybean Breeders' Workshop Planning Committee</td></tr>
+</body>
+</table>
+</div>
 
 
   
