--- a/community/sbw/SBW/SBW_2024.html
+++ b/community/sbw/SBW/SBW_2024.html
@@ -9,6 +9,9 @@ sitemap: community/sbw
 <div class="uk-margin">
   <a class="uk-text-bold" href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/2024officers.pdf"> <span class="uk-margin-right-small" uk-icon="icon: users; ratio: 1.5"></span> 2024 Soybean Breeders Workshop Planning Committee</a>
 </div>
+<div>
+  <a class="uk-text-bold" href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/2024Agenda.v2.pdf" target="_blank">View the published 2024 SBW Agenda</a>
+</div>
 
 <h3>Monday February 12th, 2024 | Room: Versailles 1</h3>
 <div class="uk-overflow-auto">
