--- a/community/sbw/SBW/SBW_2024.html
+++ b/community/sbw/SBW/SBW_2024.html
@@ -24,9 +24,9 @@ sitemap: community/sbw
     </thead>
     <body>
       <tr><td>Brittney Jones, Bayer Crop Science<br />Aaron Lorenz, University of Minnesota</td><td>Welcome and opening remarks</td></tr>
-      <tr><td><i>Keynote speech:</i> Michael Smith<br />University Distinguished Professor Emeritus, Kansas State University</td><td>A century of insect resistant soybeans: Bussin’ or busted?</td></tr>
+      <tr><td><i>Keynote speech:</i> Michael Smith<br />University Distinguished Professor Emeritus, Kansas State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/Michael_Smith.pdf">A century of insect resistant soybeans: Bussin’ or busted?</a></td></tr>
       <tr><th colspan='2'>SESSION 1: Market needs and research opportunities | Chair: Aaron Lorenz, University of Minnesota</th></tr>
-      <tr><td>Tom Slunecka, AG Management Solutions</td><td>Inspiring innovation: Ag Innovation Campus provides bridge to success</td></tr>
+      <tr><td>Tom Slunecka, AG Management Solutions</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/Tom_Slunecka.pdf">Inspiring innovation: Ag Innovation Campus provides bridge to success</a></td></tr>
       <tr><td>Donnell Rehagen, Clean Fuels Alliance America</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/Donnell_Rehagen.pdf">Accelerating to New Heights – The expanding role soybean oil plays in the major growth of clean fuels production</a></td></tr>
       <tr><td>Lisa Weaver, SmithBucklin</td><td>USB Updates</td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
@@ -57,9 +57,9 @@ sitemap: community/sbw
       <tr><td>Jeff Davis, Louisiana State Univ.</td><td>Biology and management of stink bugs in soybean</td></tr>
       <tr><td>Silvana Paula-Moraes, Univ. of Florida</td><td>Biology and management of caterpillar pests of soybean</td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
-      <tr><td>Maria Cramer, Univ. of Maryland</td><td>Slugs as pests and prey: Growing practices that impact slugs in soybeans</td></tr>
+      <tr><td>Maria Cramer, Univ. of Maryland</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/Maria_Cramer.pdf">Slugs as pests and prey: Growing practices that impact slugs in soybeans</a></td></tr>
       <tr><td>Raul Villanueva, Univ. of Kentucky</td><td>Comprehensive review of the management of <i>Dectes texanus</i> in soybeans</td></tr>
-      <tr><td>Ivair Valmorbida, Univ. of Missouri</td><td>Soybean aphid management: Is it becoming more complicated?</td></tr>
+      <tr><td>Ivair Valmorbida, Univ. of Missouri</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/Ivair_Valmorbida.pdf">Soybean aphid management: Is it becoming more complicated?</a></td></tr>
       <tr><td colspan='2'>Lunch (On your own)</td></tr>
       <tr><th colspan='2'>SESSION 4: Genetics of host plant resistance | Chair: Jamie O’Rourke, USDA-ARS</th></tr>
       <tr><td>Wayne Parrot, Univ. of Georgia</td><td>Identifying resistance QTL</td></tr>
@@ -68,7 +68,7 @@ sitemap: community/sbw
       <tr><td>Gustavo MacIntosh, Iowa State Univ.</td><td>Understanding the molecular mechanisms of plant defense suppression deployed by soybean aphids</td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
       <tr><th colspan='2'>SESSION 4: Breeding for host plant resistance | Chair: Ben Fallen, UDSA-ARS</th></tr>
-      <tr><td>George Graef, Univ. of Nebraska</td><td>Genetics of soybean host plant reaction to soybean gall midge infestation</td></tr>
+      <tr><td>George Graef, Univ. of Nebraska</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/George_Graef.pdf">Genetics of soybean host plant reaction to soybean gall midge infestation</a></td></tr>
       <tr><td>Zenglu Li, Univ. of Georgia</td><td>Breeding for insect resistance in soybean</td></tr>
       <tr><td>Molly Ryan, Corteva</td><td>Corteva insect native traits</td></tr>
       <tr><td colspan='2'>Poster Session & Social Hour<br><a href="/community/sbw/SBW/posters2024.html" target="_blank">2024 Poster Winners</a></td></tr>
