--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -153,7 +153,9 @@ sitemap: community/sbw
 <p>
 A room block is available at Hilton St. Louis Frontenac for DATE
 Please make reservations by <b>DATE</b>, to ensure group discount. 
-Here is the <a href="add a link here">direct booking link</a> for the Soybean Breeders Workshop 2026. 
+<!--
+Here is the <a href="https://www.hilton.com/en/attend-my-event/stlfhhf-sbw25-9dce262b-71d5-4042-8649-cae0a78103fc/" target="_blank">direct booking link</a> for the Soybean Breeders Workshop 2026. 
+-->
 <br> <br>
 The SBW Organizing Committee encourages attendees to use the Hilton St. Louis Frontenac for their hotel stay. 
 Your room reservations will help offset the costs of the meeting rooms throughout the conference and to keep the registration cost down.
