--- a/community/soygec/awards.html
+++ b/community/soygec/awards.html
@@ -14,16 +14,25 @@ sitemap: community
 
 
 
-<div class="uk-card uk-card-default uk-margin">
-    <div class="uk-card-header uk-text-bold uk-card-primary uk-padding-small">
-        <h3 >2026 Soybean Breeders' Workshop (SBW2026)</h3>
-    </div>
-    <div class="uk-padding">
-        <p>
-            <b>When:</b>February 16-18, 2026<br />
-            <b>Theme:</b>To Be Announced<br/>
-            <b>Where:</b>Hilton St. Louis Frontenac in St. Louis, Missouri
-        </p>		
-            <!--<h4 class="uk-margin-remove-bottom"><a href="./registration.html">2025 Soybean Breeder's Workshop Information and registration page</a></h4>-->
+<h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Mary Coker Joslin Early Career Award</h4>
+<div>
+    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
+        <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+            <img src="https://legacy.soybase.org/images/Awards_MC_Joslin.png" alt="">
+        </div>
+        <div>
+            <div class="uk-card-body">
+                <p>
+                    As a student as Vassar Collage in 1942, Mary Coker Joslin crossed lines Tokyo (from Japan) and Nanda (from Korea), to eventually generate the line Majos. 
+                    Majos was used to develop Hampton and Stuart, which were released in 1962, both lines reported high yields, shatter resistance, high oil and disease resistance. 
+                    These lines were considered valuable contributions to soybean growers in the Southeastern US. Mary Coker Joslin may be the first recorded female soybean breeder.
+                </p>
+            </div>
+            <div class="uk-card-footer">
+                <ul class="uk-list">
+                    <li>2023 - Anna Locke, USDA-ARS, Raleigh, NC</li>
+                </ul>  
+            </div>
+        </div>
     </div>
 </div>
